--- a/Src/java/buildSrc/src/main/groovy/cql.java-conventions.gradle
+++ b/Src/java/buildSrc/src/main/groovy/cql.java-conventions.gradle
@@ -83,6 +83,27 @@ spotless {
   }
 }
 
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            from components.java
+            groupId = project.group
+            artifactId = project.name
+            version = project.version
+        }
+    }
+    repositories {
+        maven {
+            name = 'nexus'
+            url = uri('https://nexus.app.evidium.com/repository/maven-releases/')
+            credentials {
+                username = nexusUsername
+                password = nexusPassword
+            }
+        }
+    }
+}
+
 /*
 A few things:
    - You must have an OSSRH Jira account (https://issues.sonatype.org/secure/Signup!default.jspa)
@@ -101,78 +122,78 @@ A few things:
    - Repo for snapshots and releases for the engine modules: https://oss.sonatype.org/content/groups/public/org/opencds/cqf/cql/
    - Repo for snapshots, releases, and staged releases for the engine modules: https://oss.sonatype.org/content/groups/staging/org/opencds/cqf/cql/
  */
-publishing {
-    publications {
-        mavenDeployer(MavenPublication) {
-            from components.java
+//publishing {
+//    publications {
+//        mavenDeployer(MavenPublication) {
+//            from components.java
+//
+//            pom {
+//                name = project.name
+//                packaging = 'jar'
+//                description = "The ${project.name} library for the Clinical Quality Language Java reference implementation"
+//                url = 'http://cqframework.info'
+//
+//                scm {
+//                    connection = 'scm:git:git@github.com:cqframework/clinical_quality_language.git'
+//                    developerConnection = 'scm:git:git@github.com:cqframework/clinical_quality_language.git'
+//                    url = 'git@github.com:cqframework/clinical_quality_language.git'
+//                }
+//
+//                licenses {
+//                    license {
+//                        name ='The Apache License, Version 2.0'
+//                        url = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+//                    }
+//                }
+//
+//                developers {
+//                    developer {
+//                        name = 'Bryn Rhodes'
+//                    }
+//                    developer {
+//                        name = 'Chris Moesel'
+//                    }
+//                    developer {
+//                        name = 'Rob Dingwell'
+//                    }
+//                    developer {
+//                        name = 'Jason Walonoski'
+//                    }
+//                    developer {
+//                        name = 'Marc Hadley'
+//                    }
+//                    developer {
+//                        name = 'Jonathan Percival'
+//                    }
+//                }
+//            }
+//        }
+//    }
+//    repositories {
+//        maven {
+//            credentials {
+//                username project.hasProperty("ossrhUsername") ? ossrhUsername : System.getenv("OSSRH_USERNAME") != null ? System.getenv("OSSRH_USERNAME") : ""
+//                password project.hasProperty("ossrhPassword") ? ossrhPassword : System.getenv("OSSRH_TOKEN") != null ? System.getenv("OSSRH_TOKEN") : ""
+//            }
+//
+//            /* Use these to test locally (but don't forget to comment out others!)
+//            def releasesRepoUrl = "file://${buildDir}/repo"
+//            def snapshotsRepoUrl = "file://${buildDir}/ssRepo"
+//            */
+//
+//            // change URLs to point to your repos, e.g. http://my.org/repo
+//            def releasesRepoUrl = "https://oss.sonatype.org/service/local/staging/deploy/maven2/"
+//            def snapshotsRepoUrl = "https://oss.sonatype.org/content/repositories/snapshots/"
+//            url = version.endsWith('SNAPSHOT') ? snapshotsRepoUrl : releasesRepoUrl
+//        }
+//    }
+//}
 
-            pom {
-                name = project.name
-                packaging = 'jar'
-                description = "The ${project.name} library for the Clinical Quality Language Java reference implementation"
-                url = 'http://cqframework.info'
-
-                scm {
-                    connection = 'scm:git:git@github.com:cqframework/clinical_quality_language.git'
-                    developerConnection = 'scm:git:git@github.com:cqframework/clinical_quality_language.git'
-                    url = 'git@github.com:cqframework/clinical_quality_language.git'
-                }
-
-                licenses {
-                    license {
-                        name ='The Apache License, Version 2.0'
-                        url = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
-                    }
-                }
-
-                developers {
-                    developer {
-                        name = 'Bryn Rhodes'
-                    }
-                    developer {
-                        name = 'Chris Moesel'
-                    }
-                    developer {
-                        name = 'Rob Dingwell'
-                    }
-                    developer {
-                        name = 'Jason Walonoski'
-                    }
-                    developer {
-                        name = 'Marc Hadley'
-                    }
-                    developer {
-                        name = 'Jonathan Percival'
-                    }
-                }
-            }
-        }
-    }
-    repositories {
-        maven {
-            credentials {
-                username project.hasProperty("ossrhUsername") ? ossrhUsername : System.getenv("OSSRH_USERNAME") != null ? System.getenv("OSSRH_USERNAME") : ""
-                password project.hasProperty("ossrhPassword") ? ossrhPassword : System.getenv("OSSRH_TOKEN") != null ? System.getenv("OSSRH_TOKEN") : ""
-            }
-
-            /* Use these to test locally (but don't forget to comment out others!)
-            def releasesRepoUrl = "file://${buildDir}/repo"
-            def snapshotsRepoUrl = "file://${buildDir}/ssRepo"
-            */
-
-            // change URLs to point to your repos, e.g. http://my.org/repo
-            def releasesRepoUrl = "https://oss.sonatype.org/service/local/staging/deploy/maven2/"
-            def snapshotsRepoUrl = "https://oss.sonatype.org/content/repositories/snapshots/"
-            url = version.endsWith('SNAPSHOT') ? snapshotsRepoUrl : releasesRepoUrl
-        }
-    }
-}
-
-signing {
-    if (!version.endsWith('SNAPSHOT')){
-        sign publishing.publications.mavenDeployer
-    }
-}
+//signing {
+//    if (!version.endsWith('SNAPSHOT')){
+//        sign publishing.publications.mavenDeployer
+//    }
+//}
 
 javadoc {
     if(JavaVersion.current().isJava9Compatible()) {
