--- a/Src/java/gradle.properties
+++ b/Src/java/gradle.properties
@@ -4,8 +4,8 @@ org.gradle.jvmargs=-Xmx4096m
 
 systemProp.sonar.gradle.skipCompile=true
 
-group=info.cqframework
-version=3.23.0-SNAPSHOT
+group=com.evidium.cqframework
+version=3.23.0
 specification.version=1.5.2
 hapi.version=7.6.1
 jackson.version=2.17.1
